Changes from jTDS 0.9
=========================

12/07/2004 - Alin Sinpalean
 o Updated the build files to create a binary distribution package containing
   the readme, license, html documentation, XA DLL and SQL as well as the jar,
   instead of the plain jar as it was before.
 o Updated README and README.XA.
 o Corrected bug [1080659] ParamInfo throws NullPointerException.
 o Corrected loading of Charsets.properties under a J2EE environment.

12/06/2004 - Alin Sinpalean
 o Minor code cleanup using FindBugs.

12/05/2004 - Alin Sinpalean
 o Applied Mike's fix for bug [1078927] Callable statement fails (callable
   statements with both literal parameters and parameter markers failed to
   execute).

12/03/2004 - Alin Sinpalean
 o Corrected bug [1078325] Multithreaded prepared statement errors (or at least
   I sure do hope so). The problem seems to have been the fact that preparing
   a statement and executing it was not a single, atomic operation and a
   rollback() could occur between the two basically "unpreparing" the
   statement. Also synchronized some methods in ConnectionJDBC2 that looked
   like they needed some sync.
 o Corrected some exception error messages that contained incorrect hexadecimal
   values.
 o Corrected an issue in SQLParser that prevented CallableStatements from
   working properly with procedures containing semicolons in their name (e.g.
   "test;1").
 o Modified BlobImpl.getBytes() and ClobImpl.getString() to return as much data
   as available instead of throwing an SQLException if the length parameter is
   too big (this is my understanding of the API documentation).
 o Removed ColData from CVS (forgot to do it when applying the patch).
 o Applied Mike's patch [1077886] XA Emulation mode.

12/02/2004 - Alin Sinpalean
 o Added a unit test (and made a couple of minor fixes) for column collation
   support. Seems to work fine now.
 o Fixed TimestampTest.testWriteDate() to actually test whether dates are