@@ -55,7 +55,7 @@ table.inner td.fastest { color: #00ff00; }
 
 
 <p class="title">jTDS feature matrix</p>
-<p>Below is the list of features of jTDS release 0.9.</p>
+<p>Below is the list of features of jTDS release 0.9.1.</p>
 <table class="inner" cellspacing="0">
   <tr>
     <td colspan="2"><p class="title">Compliance</p></td>
