@@ -43,7 +43,7 @@ import java.util.Properties;
  * @author Brian Heineman
  * @author Mike Hutchinson
  * @author Alin Sinpalean
- * @version $Id: Driver.java,v 1.43 2004-12-03 14:42:34 alin_sinpalean Exp $
+ * @version $Id: Driver.java,v 1.44 2004-12-08 09:31:08 alin_sinpalean Exp $
  */
 public class Driver implements java.sql.Driver {
     /** URL prefix used by the driver (i.e <code>jdbc:jtds:</code>). */
@@ -52,8 +52,8 @@ public class Driver implements java.sql.Driver {
     static final int MAJOR_VERSION = 0;
     /** Driver minor version. */
     static final int MINOR_VERSION = 9;
-    /** Driver version miscellanea (e.g "-rc2" or ".1"). */
-    static final String MISC_VERSION = null;
+    /** Driver version miscellanea (e.g "-rc2", ".1" or <code>null</code>). */
+    static final String MISC_VERSION = ".1";
     /** Set if the JDBC specification to implement is 3.0 or greater. */
     public static final boolean JDBC3 =
             "1.4".compareTo(System.getProperty("java.specification.version")) <= 0;
